kubernetes/odoo/odoo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: odoo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo
  namespace: odoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo
  template:
    metadata:
      labels:
        app: odoo
    spec:
      securityContext:
        fsGroup: 101

      containers:
        - name: odoo
          image: odoo:18
          ports:
            - containerPort: 8069
          volumeMounts:
            - name: odoo-data
              mountPath: /var/lib/odoo

      volumes:
        - name: odoo-data
          persistentVolumeClaim:
            claimName: odoo-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: odoo
  namespace: odoo
spec:
  selector:
    app: odoo
  ports:
    - port: 8069
      targetPort: 8069
  type: ClusterIP
